--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -8,6 +8,8 @@
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
     <div class="navlink"><a href="/logout">Log out</a></div>
+    <div class="navlink"><a id="makeDomosButton" href="/maker">Make Domos</a></div>
+    <div class="navlink"><a id="changePassButton" href="/changePass">Change Password</a></div>
   </nav>
 
   <section id="makeDomo">
